substrate/frame/support/test/tests/derive_impl_ui/missing_disambiguation_path.stderr
error: unexpected end of input, expected identifier
  --> tests/derive_impl_ui/missing_disambiguation_path.rs:55:1
   |
55 | #[derive_impl(FourLeggedAnimal as)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `derive_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
